--- a/mein_addon/config.json
+++ b/mein_addon/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Mein Test-Add-on",
+  "name": "Detlefs Test-Add-on",
   "version": "1.0.0",
   "slug": "mein_test_addon",
   "description": "Ein einfaches Add-on zur Demonstration",
